Css clean up, image optimisation and some edits to content.

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,8 +9,9 @@
   <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex, nocache">
   <meta name="googlebot" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
   <meta name="bingbot" content="noindex, nofollow, noarchive, nosnippet, noimageindex">
-  
+
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="preload" as="image" href="/images/hero.jpg">
 
   <script src="/js/vendor/typewriter-effect.js"></script>
 
