--- a/layouts/_default/materials.html
+++ b/layouts/_default/materials.html
@@ -110,10 +110,10 @@
       <h4>The I.D.E.A. framework</h4>
       <ul>
         <li>Identify, Describe, Explain, Analyse</li>
-        <li>You can use this framework when asking questions of participants to see if they have understood what you've been saying.</li>
-        <li>Can people Identify (what is it), Describe (give examples - who, when, where), Explain (why is it important or interesting) and Analyse (how does this concept help - or not - and to what extent).</li>
-        <li>In effect you're asking about what (Identity), who, when, where (Describe) and why (Explain) - these are the "5 W's", often used to structure a journalistic piece.</li>
-        <li>This is only a rough rule of thumb to guide your questions as a facilitator.</li>
+        <li>You can use this framework when asking questions of participants to see if they have understood what you've been saying</li>
+        <li>Can people Identify (what is it), Describe (give examples - who, when, where), Explain (why is it important or interesting) and Analyse (how does this concept help - or not - and to what extent)</li>
+        <li>In effect you're asking about what (Identity), who, when, where (Describe) and why (Explain) - these are the "5 W's", often used to structure a journalistic piece</li>
+        <li>This is only a rough rule of thumb to guide your questions as a facilitator</li>
       </ul>
     
       <h4>Creating Safe Space</h4>
@@ -126,16 +126,17 @@
 
       <h4>Keeping Discussion Focused</h4>
       <ul>
-        <li>Use the discussion questions as anchors</li>
+        <li>Use the discussion questions at the bottom of the Session pages as anchors for conversation</li>
         <li>Bring conversations back to concrete examples</li>
         <li>Connect abstract concepts to lived experience</li>
         <li>Set a time-limit for activities to maintain momentum - 'Let's spend 10 minutes...'</li>
-        <li>But remember, the content is a <strong>stimulus</strong> to conversation, so if the conversation is productive then don't close it down to simply try and get through the content.</li>
+        <li>But remember, the content is a <strong>stimulus</strong> to conversation, so if the conversation is productive then don't close it down to simply try and get through the content</li>
       </ul>
 
       <h4>Handling Challenging Moments</h4>
       <ul>
-        <li>Political education can surface tension - that's productive</li>
+        <li>Remind comrades of the <strong>ground rules</strong> from Handout 1, in particular the need to <strong>criticise ideas, not individuals</strong></li>
+        <li>Political education can - and perhaps should - make tensions surface. This can be welcomed as productive, but it often makes people uncomfortable and this should be acknowledged</li>
         <li>Make space for discomfort while maintaining respect</li>
         <li>Use the idea of "productive tensions" explored in session 1 as a framework to explore disagreements</li>
         <li>Consider as you listen whether to pause and reflect or push forward</li>
