--- a/layouts/index.html
+++ b/layouts/index.html
@@ -57,7 +57,7 @@
 <section class="week-journey">
   <div class="journey-content">
     <h2>Four Week Course</h2>
-    
+
     <div class="week-cards">
       <div class="week-card" data-week="1">
         <span class="week-label">WEEK 1</span>
@@ -87,18 +87,11 @@
         <p>Where does working-class power exist in our town or city today?</p>
       </div>
     </div>
-  </div>
-</section>
 
-<section id="course-overview" class="course-overview">
-  <div class="overview-content">
     <div class="standout-card">
       <p><strong>This is co-learning, not teaching.</strong></p>
       <p>At the end of the course your aim as a facilitator should be to try and encourage participants to facilitate the course themselves in another run.</p>
-        
-      <p></p><em>Each one, teach one.</em></p>
-    </div>
-    
+      <p><em>Each one, teach one.</em></p>
     </div>
   </div>
 </section>
